--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header>
     <img src="imagen/yo.JPG" alt="Foto de Andrew Ávila" />
     <div class="header-text">
-      <h1>Andrew Ávila Chavira</h1>
+      <h1>Andrew Chavira</h1>
       <h2>Desarrollo de Software Multiplataforma</h2>
     </div>
   </header>
